--- a/docs/4/modules/filter.yml
+++ b/docs/4/modules/filter.yml
@@ -38,6 +38,19 @@ configuration:
     default: 5s
     description: |-
       The time period between attempts to check whether the filter configuration file needs to be written.
+  - name: backoff
+    type: Number
+    required: false
+    default: 0s
+    description: |-
+      The value to multiply the saveperiod by every time a save fails. When the save succeeds the period will be reset.
+  - name: maxbackoff
+    type: Duration
+    required: false
+    default: 0s
+    description: |-
+      The maximum write period that should be allowed even if incremental backoff is enabled.
+
   details: |-
     The engine field should be set to the name of a regular expression engine.
 
@@ -49,7 +62,9 @@ configuration:
                 notifyuser="yes"
                 warnonselfmsg="no"
                 filename="filters.conf"
-                saveperiod="5s">
+                saveperiod="5s"
+                backoff="2"
+                maxbackoff="5m">
     ```
 - name: keyword
   description: |-
