--- a/docs/4/modules/xline_db.yml
+++ b/docs/4/modules/xline_db.yml
@@ -20,9 +20,23 @@ configuration:
     default: 5s
     description: |-
       The time period between attempts to check whether the X-line database needs to be written.
+  - name: backoff
+    type: Number
+    required: false
+    default: 0s
+    description: |-
+      The value to multiply the saveperiod by every time a save fails. When the save succeeds the period will be reset.
+  - name: maxbackoff
+    type: Duration
+    required: false
+    default: 0s
+    description: |-
+      The maximum write period that should be allowed even if incremental backoff is enabled.
   details: ""
   example: |-
     ```xml
     <xlinedb filename="xline.db"
-             saveperiod="5s">
+             saveperiod="5s"
+             backoff="2"
+             maxbackoff="5m">
     ```
