--- a/docs/4/modules/cloak_md5.yml
+++ b/docs/4/modules/cloak_md5.yml
@@ -1,7 +1,7 @@
 name: cloak_md5
 
 description: |-
-  This module adds the `half` and `full` cloaking methods for use with [the cloak module](/4/modules/cloak).
+  This module adds the `half` and `full` cloaking methods for use with [the cloak module](/4/modules/cloak). These methods are deprecated but exist for compatibility with v3.
 
 configuration:
 - name: cloak
