--- a/docs/4/modules/cloak_sha256.yml
+++ b/docs/4/modules/cloak_sha256.yml
@@ -17,10 +17,10 @@ configuration:
   added_values:
   - name: hmac-sha256
     description: |-
-      If the user has a DNS hostname or is connecting via a UNIX socket then cloak with an HMAC-SHA256 hash of their hostname and socket path suffixed with the public part of that value. Otherwise, cloak with three HMAC-SHA256 hashes of significant ranges of their IP address (IPv4: /16 /24 /32, IPv6: /32 /48 /64).
+      If the user has a DNS hostname or is connecting via a UNIX socket then cloak with an HMAC-SHA256 hash of their hostname and socket path suffixed with the public part of that value. Otherwise, cloak with three HMAC-SHA256 hashes of significant ranges of their IP address (see below).
   - name: hmac-sha256-ip
     description: |-
-      If the user is connecting via a UNIX socket then cloak with an HMAC-SHA256 hash of their socket path suffixed with the public part of the path. Otherwise, cloak with three HMAC-SHA256 hashes of significant ranges of their IP address (IPv4: /16 /24 /32, IPv6: /32 /48 /64).
+      If the user is connecting via a UNIX socket then cloak with an HMAC-SHA256 hash of their socket path suffixed with the public part of the path. Otherwise, cloak with three HMAC-SHA256 hashes of significant ranges of their IP address (see below).
   attributes:
   - name: key
     type: Text
@@ -104,3 +104,21 @@ configuration:
            pathparts="1"
            class="">
     ```
+
+special_notes: |-
+  Assuming an IPv4 address of `12.23.34.45` and cloaked part of `74ero2cv.ucctzwrd.uyclsgi7` the cloak segments represent:
+
+  IPv4 Segment | Cloak Segment | CIDR Range
+  ------------ | ------------- | ----------
+  12.23.34.45  | 74ero2cv (1)  | /32
+  12.23.34     | ucctzwrd (2)  | /24
+  12.23        | uyclsgi7 (3)  | /16
+
+
+  Assuming an IPv6 address of `2001:db8:dead:cafe:beef:feed:f00d:face` and a cloaked part of `2rravfdm:zjmad7mb:l2kirwft` the cloak segments represent:
+
+  IPv6 Segment                           | Cloak Segment | CIDR Range
+  -------------------------------------- | ------------- | ----------
+  2001:db8:dead:cafe:beef:feed:f00d:face | 2rravfdm (1)  | /128
+  2001:db8:dead:cafe:beef:feed:f00d      | zjmad7mb (2)  | /112
+  2001:db8:dead:cafe                     | l2kirwft (3)  | /64
