--- a/docs/4/modules/httpd_stats.yml
+++ b/docs/4/modules/httpd_stats.yml
@@ -1,1 +1,7 @@
-../../3/modules/httpd_stats.yml
+name: httpd_stats
+
+description: |-
+  This module provides XML-serialised statistics about the server, channels, and users over HTTP via the /stats path.
+
+special_notes: |-
+  Leaking your server statistics over the internet is a privacy and security risk. You should avoid doing this by either configuring [the httpd module](/{{ version }}/modules/httpd) to only listen for local connections or by using [the httpd_acl module](/{{ version }}/modules/httpd_acl) to restrict who can view your server configuration.
