Fix a typo in the account-id cloak example.

--- a/docs/4/modules/cloak_user.yml
+++ b/docs/4/modules/cloak_user.yml
@@ -70,7 +70,7 @@ configuration:
     Cloaking using the account-id method:
 
     ```xml
-    <cloak method="account"
+    <cloak method="account-id"
            class=""
            invalidchar="strip"
            prefix="MyNet/"
